Matrixmul_vivado/Matrixmul_vivado.sdk/.metadata/.plugins/org.eclipse.cdt.ui/matrixmul_bsp_xaxidma_example_sgcyclic_intr_1.build.log
18:56:07 **** Auto Build of configuration Debug for project matrixmul_bsp_xaxidma_example_sgcyclic_intr_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xaxidma_example_sgcyclic_intr.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_example_sgcyclic_intr.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../matrixmul_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxidma_example_sgcyclic_intr.d" -MT"src/xaxidma_example_sgcyclic_intr.o" -o "src/xaxidma_example_sgcyclic_intr.o" "../src/xaxidma_example_sgcyclic_intr.c"
../src/xaxidma_example_sgcyclic_intr.c:113:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^~~~~~~
../src/xaxidma_example_sgcyclic_intr.c: In function 'main':
../src/xaxidma_example_sgcyclic_intr.c:125:21: error: 'XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_FABRIC_AXIDMA_1_MM2S_INTROUT_VEC_ID'?
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_sgcyclic_intr.c:125:21: note: in definition of macro 'TX_INTR_ID'
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xaxidma_example_sgcyclic_intr.c:125:21: note: each undeclared identifier is reported only once for each function it appears in
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_sgcyclic_intr.c:125:21: note: in definition of macro 'TX_INTR_ID'
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xaxidma_example_sgcyclic_intr.c:124:21: error: 'XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_FABRIC_AXIDMA_1_S2MM_INTROUT_VEC_ID'?
 #define RX_INTR_ID  XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_sgcyclic_intr.c:124:21: note: in definition of macro 'RX_INTR_ID'
 #define RX_INTR_ID  XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/xaxidma_example_sgcyclic_intr.o] ¿À·ù 1

18:56:07 Build Finished (took 425ms)

